--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "doctrine/dbal": "^2.5",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "league/plates": "^3.3"
+        "league/plates": "^3.3",
+        "predis/predis": "~1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
